7+Bonus: Optimisation via multistage et JRE jlink